# fastapi-nexus-template

./: .env.example  .gitignore  Makefile  README.md  cookies.txt  docker-compose.override.yml  docker-compose.yml  setup.sh
backend/: Dockerfile  alembic.ini  prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251120_2137-aed90cd6d13f_initial_with_sqlalchemy.py
backend/app/: __init__.py  main.py
backend/app/admin/: __init__.py  auth.py  models.py  setup.py  utils.py  views.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py
backend/app/core/: config.py  logging_config.py  rate_limit.py  redis_client.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  email_verification_token.py  password_reset_token.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: __init__.py  email.py
backend/app/tasks/: celery_app.py  cleanup.py  example.py  user_cleanup.py
backend/app/templates/emails/: base.html  deletion_reminder.html  deletion_scheduled.html  logout_all.html  password_changed.html  reset_password.html  verify_email.html  welcome.html
backend/tests/: conftest.py  test_auth.py  test_health.py
docs/: old_models.txt
